Fixed to be broken layout when select style. BugzID #102507

--- a/mt-static/plugins/StyleCatcher/templates.css
+++ b/mt-static/plugins/StyleCatcher/templates.css
@@ -179,7 +179,7 @@ span#find-category {
     top: 0;
     height: 398px;
     width: auto;
-    padding: 10px 10px;
+    padding: 10px 8px;
     border: 1px solid #c8c2be;
     overflow: hidden;
     background-color: #f3f3f3;
